test: Write unit tests for StripeWebhookService mocking UserRepository, PlanRepository with mock Stripe Event objects. - Also minor style tweaks to repository tests